--- a/responsive.css
+++ b/responsive.css
@@ -7,6 +7,7 @@
     {
         margin-top: 1rem;
     }
+   
 }
 @media (min-width: 460px){
   
@@ -14,4 +15,11 @@
         margin-top: 5rem
     }
    
+}
+
+@media (max-width: 998px){
+    .secoundimage
+    {
+        display: none;
+    }
 }
