--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,14 @@
+@media (max-width: 768px){
+    .changing-text
+    {
+        margin-top: 8rem;
+    }
+    .mainimage
+    {
+        margin-top: 1rem;
+    }
+   
+}
 @media (min-width: 768px){
     .changing-text
     {
